Updated yaml and saving of playlists
Playlists are now saved in a JSON file as {"id" : id, "uri" : uri}
